# receipebox_v1

./: .gitignore  pyproject.toml
recipe/: forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20200607_0240.py  0003_auto_20200607_0247.py
recipe/templates/: author.html  base.html  favorites.html  genericform.html  index.html  logged_out.html  recipe_detail.html
recipes/: settings.py  urls.py
