[tool.poetry]
name = "recipesbox_v1"
version = "0.1.0"
description = ""
authors = ["Tiffany McLean <tamclean324@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
